[fix] Gallery: show start/stop buttons on small screens

--- a/www/plugins/market/css/style.css
+++ b/www/plugins/market/css/style.css
@@ -178,8 +178,12 @@
 }
 
 .modal-pictures .image {
+
     width: 100%;
-    height: 600px;
+    height: calc(100vh);
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
     background-size: contain;
     background-repeat: no-repeat;
     background-position-x: center;
@@ -187,7 +191,7 @@
 }
 
 .modal-pictures .image > .item {
-    background-color: rgba(255,255,255,0.9) !important;
+    background-color: rgba(255,255,255,0.8) !important;
 }
 
 .modal-pictures .image > .item h3 {
@@ -204,7 +208,7 @@
 .modal-pictures .card-description {
     position: absolute;
     bottom: 10%;
-    width: 100%;
+    width: calc(100vw - 16px);
     max-height: 50%;
     min-height: 150px;
 }
@@ -220,9 +224,7 @@
 }
 
 @media screen and (min-width: 768px) {
-    .modal-pictures .image {
-        height: calc(100vh);
-    }
+
 
     .modal-pictures .bar.bar-header {
         height: 80px;
@@ -277,11 +279,11 @@
     }
 
     .modal-pictures .card.card-description {
-        max-width: 50%;
         padding: 16px 16px 0px;
         text-overflow: ellipsis;
         overflow: hidden;
         margin-bottom: 0;
+        max-width: 75%;
     }
     .modal-pictures .card.card-description .item {
         font-size: 17pt;
